Добавил application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
           filters:
             - StripPrefix=1
 
+filters:
+  - name: CircuitBreaker
+    args:
+      name: userServiceCB
+      fallbackUri: forward:/fallback/user
+
 eureka:
   client:
     service-url:
