--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,21 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>4.3.0</version>
         </dependency>
 
         <!-- Service Discovery (Eureka Client) -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.3.0</version>
         </dependency>
 
         <!-- Circuit Breaker (Resilience4j) -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+
         </dependency>
 
         <!-- Логирование для отладки -->
