--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,13 +21,9 @@ spring:
                 name: userServiceCB
                 fallbackUri: forward:/user-fallback
 
-filters:
-  - name: CircuitBreaker
-    args:
-      name: userServiceCB
-      fallbackUri: forward:/fallback/user
-
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
