--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,24 +2,17 @@ server:
   port: 8080
 
 spring:
-  application:
-    name: gateway-service
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
       routes:
         - id: user-service
-          uri: lb://user-service
+          uri: lb://USER-SERVICE
           predicates:
             - Path=/api/users/**
-          filters:
-            - StripPrefix=1
-            - name: CircuitBreaker
-              args:
-                name: userServiceCB
-                fallbackUri: forward:/user-fallback
+        - id: notification-service
+          uri: lb://NOTIFICATION-SERVICE
+          predicates:
+            - Path=/api/notifications/**
 
 eureka:
   client:
